documents: update title search to Drive v2

The title must be passed as part of the "q" parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=758524